إصلاح عرض الشعار في PDF

--- a/app/templates/valuation_pdf_report.html
+++ b/app/templates/valuation_pdf_report.html
@@ -136,7 +136,7 @@
 <body>
   <div class="header">
     <div class="logo-section">
-      <img src="file:///C:/Users/USER/Videos/New%20folder/app/static/images/logo.png" class="logo-img" alt="اللوغو">
+      <img src="{{ url_for('static', filename='images/logo.png') }}" class="logo-img" alt="اللوغو">
       <div class="logo-container">
         <div>بندر العتيبي</div>
         <div>@A1B1H</div>
