Updated all modified files including Excel

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -305,6 +305,7 @@
     <div class="container py-4 fade-in">
         {% block content %}{% endblock %}
     </div>
+                    <p>عدد الزوار : {{ visitor_count }}</p>
 
     <!-- تذييل الصفحة -->
     <footer class="copyright-footer">
@@ -314,9 +315,10 @@
                 <h6 class="disclaimer-title">تنويه هام:</h6>
                 <ul>
                     <li>هذا الموقع يقدم معادلات حسابية لحساب القيمة العادلة للنماذج المالية وفقا لمدخلات المستخدم</li>
-                    <li>هذا الموقع لا يعكس القيمة الحقيقة للشركة وإنما يساعد في حساب تقييم النماذج المالية لغرض القيمة العادلة للشركة بناء على التوقعات المستقبلية</li>
+                    <li>البيانات المعروضة هي للأغراض تعليمية أو توعوية فقط </li>
                     <li>جميع المعلومات المالية للشركات مصدرها موقع تداول السعودية</li>
                     <li>هذا الموقع لا يقدم أي توصية شراء أو بيع للشركات</li>
+                    <li>هذا الموقع لا يمثل تداول السعودية أو جهة رسمية</li>
                 </ul>
             </div>
             
