--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}تحليل و تقييم الأسهم السعودية{% endblock %}</title>
+    <title>{% block title %}تحليل الأسهم السعودية{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
@@ -305,7 +305,6 @@
     <div class="container py-4 fade-in">
         {% block content %}{% endblock %}
     </div>
-                    <p>عدد الزوار : {{ visitor_count }}</p>
 
     <!-- تذييل الصفحة -->
     <footer class="copyright-footer">
@@ -314,8 +313,9 @@
             <div class="disclaimer-box">
                 <h6 class="disclaimer-title">تنويه هام:</h6>
                 <ul>
-                    <li>هذا الموقع يقدم معادلات حسابية لحساب القيمة العادلة للنماذج المالية وفقا لمدخلات المستخدم</li>
-                    <li>البيانات المعروضة هي للأغراض تعليمية أو توعوية فقط </li>
+                    <li>هذا الموقع يقدم معادلات حسابية لتحليل القيمة للنماذج المالية وفقا لمدخلات المستخدم</li>
+                    <li>هذا الموقع لا يعكس القيمة الحقيقة للشركة وإنما أداة تساعد في حساب النماذج المالية </li>
+                    <li>البيانات المعروضة هي للأغراض تعليمية أو توعوية فقط</li>
                     <li>جميع المعلومات المالية للشركات مصدرها موقع تداول السعودية</li>
                     <li>هذا الموقع لا يقدم أي توصية شراء أو بيع للشركات</li>
                     <li>هذا الموقع لا يمثل تداول السعودية أو جهة رسمية</li>
